--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
 </head>
 <body>
   <h1>Welcome to my Portfolio Page!</h1>
-  <img src="images/suz-in-Norway.jpg" width="400px">
   
+  <img src="images/suz-in-Norway.jpg" width="400px">
 
+  <h2>Come take a look at some of the projects I have made so far</h2>
+
+  <h3><a href="https://github.com/SuzSch/boring-lecture">Boring Lecture</a></h3>
+  
+  <p>Some may call it boring, but I call it a great learning experience. While making this project I learned some new skills such as:</p>
+  <ul>
+    <li>Styling with the class attribute</li>
+    <li>Styling with id attribute</li>
+    <li>The difference between the two and when to use use which</li>
+    <li></li>
+
+  </ul>
+    
+  
   
   <p></p>
 
