Add 2 more project links and desciptions.

--- a/index.html
+++ b/index.html
@@ -18,13 +18,27 @@
     <li>Styling with the class attribute</li>
     <li>Styling with id attribute</li>
     <li>The difference between the two and when to use use which</li>
-    <li></li>
-
   </ul>
     
+  <h3><a href="https://github.com/SuzSch/First-Push">First First-Push</a></h3>
+  
+  <p>This project was made in day two of class and it was a doozy. I learned all about Git, with its many step process and about GitHub and how use it to track your work and share it with others. Some lessons learned were:</p>
+  <ul>
+    <li>How to set up new remote repositories in GitHub</li>
+    <li>How to push and pull to and from a remote repository </li>
+    <li>How to clone a remote repository to make it a remote repository</li>
+  </ul>
+
+  <h3><a href="https://github.com/SuzSch/happy-hour">Happy Hour</a></h3>
+  
+  <p>Let's keep the fun times going! This is a project I have been working on in my own time to practice my new found skills and to hopefully have a simple living webpage where we can post upcoming after school happy hours. This is still very much a WIP but in the future I hope to add these features:</p>
+  <ul>
+    <li>Some kind of fun animated background. Haven't quite figured that one out yet.</li>
+    <li>Some kind of Google Maps feature to link address of the place we are going that week.</li>
+    <li>A section to post pics from previous happy hour outtings.</li>
+  </ul>
   
   
-  <p></p>
 
 
 
