remove style for heading to redo, add about me section.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,39 @@
   <title>Suzanne Schuber Portfolio</title>
 </head>
 <body>
-  <h1>Welcome to my Portfolio Page!</h1>
+  <h1>Welcome to Suzanne Schuber's Portfolio Page!</h1>
   
   <img src="images/suz-in-Norway.jpg" width="400px">
+  
+  <h2>About Me</h2>
 
+  <p>This is my first foray into coding of any kind. Some of my more interesting past jobs have been ski instructor, lifeguard, barista, flower farmer, florist and price file manager. I think by bringing all of the various skills I have picked up during these jobs to coding, I can be a valuable assest to any team.
+  </p>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   <h2>Come take a look at some of the projects I have made so far</h2>
 
-  <h3 class="project"><a href="https://github.com/SuzSch/boring-lecture">Boring Lecture</a></h3>
+  <h3><a href="https://github.com/SuzSch/boring-lecture">Boring Lecture</a></h3>
   
   <p>Some may call it boring, but I call it a great learning experience. While making this project I learned some new skills such as:</p>
   <ul>
@@ -20,7 +46,7 @@
     <li>The difference between the two and when to use use which</li>
   </ul>
     
-  <h3 class="project"><a href="https://github.com/SuzSch/First-Push">First First-Push</a></h3>
+  <h3><a href="https://github.com/SuzSch/First-Push">First First-Push</a></h3>
   
   <p>This project was made in day two of class and it was a doozy. I learned all about Git, with its many step process and about GitHub and how use it to track your work and share it with others. Some lessons learned were:</p>
   <ul>
@@ -29,7 +55,7 @@
     <li>How to clone a remote repository to make it a remote repository</li>
   </ul>
 
-  <h3 class="project"><a href="https://github.com/SuzSch/happy-hour">Happy Hour</a></h3>
+  <h3><a href="https://github.com/SuzSch/happy-hour">Happy Hour</a></h3>
   
   <p>Let's keep the fun times going! This is a project I have been working on in my own time to practice my new found skills and to hopefully have a simple living webpage where we can post upcoming after school happy hours. This is still very much a WIP but in the future I hope to add these features:</p>
   <ul>
