--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Suzanne Schuber Portfolio</title>
 </head>
 <body>
-  <h1>Welcome to Suzanne Schuber's Portfolio Page!</h1>
+  <h1 class="center">Welcome to Suzanne Schuber's Portfolio Page!</h1>
   
   <img src="images/suz-in-Norway.jpg" width="400px">
   
@@ -13,27 +13,8 @@
 
   <p>This is my first foray into coding of any kind. Some of my more interesting past jobs have been ski instructor, lifeguard, barista, flower farmer, florist and price file manager. I think by bringing all of the various skills I have picked up during these jobs to coding, I can be a valuable assest to any team.
   </p>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
+<div>
   
   <h2>Come take a look at some of the projects I have made so far</h2>
 
@@ -41,9 +22,9 @@
   
   <p>Some may call it boring, but I call it a great learning experience. While making this project I learned some new skills such as:</p>
   <ul>
-    <li>Styling with the class attribute</li>
-    <li>Styling with id attribute</li>
-    <li>The difference between the two and when to use use which</li>
+    <li>Styling with the <strong>class</strong> attribute</li>
+    <li>Styling with <strong>id</strong> attribute</li>
+    <li>The difference between the two and when to use which</li>
   </ul>
     
   <h3><a href="https://github.com/SuzSch/First-Push">First First-Push</a></h3>
@@ -51,7 +32,7 @@
   <p>This project was made in day two of class and it was a doozy. I learned all about Git, with its many step process and about GitHub and how use it to track your work and share it with others. Some lessons learned were:</p>
   <ul>
     <li>How to set up new remote repositories in GitHub</li>
-    <li>How to push and pull to and from a remote repository </li>
+    <li>How to <strong>push</strong> and <strong>pull</strong> to and from a remote repository </li>
     <li>How to clone a remote repository to make it a remote repository</li>
   </ul>
 
@@ -59,18 +40,12 @@
   
   <p>Let's keep the fun times going! This is a project I have been working on in my own time to practice my new found skills and to hopefully have a simple living webpage where we can post upcoming after school happy hours. This is still very much a WIP but in the future I hope to add these features:</p>
   <ul>
-    <li>Some kind of fun animated background. Haven't quite figured that one out yet.</li>
+    <li>Some kind of fun animated background. <em>Haven't quite figured that one out yet.</em></li>
     <li>Some kind of Google Maps feature to link address of the place we are going that week.</li>
     <li>A section to post pics from previous happy hour outtings.</li>
   </ul>
   
-  
-
-
-
-
-
-
+</div>
 
 
 
