--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link href="css/styles.css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Suzanne Schuber Portfolio</title>
 </head>
 <body>
@@ -9,14 +9,14 @@
   
   <img src="images/suz-in-Norway.jpg" width="400px">
   
-  <h2>About Me</h2>
+  <h2 class="center">About Me</h2>
 
   <p>This is my first foray into coding of any kind. Some of my more interesting past jobs have been ski instructor, lifeguard, barista, flower farmer, florist and price file manager. I think by bringing all of the various skills I have picked up during these jobs to coding, I can be a valuable assest to any team.
   </p>
 
 <div>
   
-  <h2>Come take a look at some of the projects I have made so far</h2>
+  <h2 class="center">Come take a look at some of the projects I have made so far</h2>
 
   <h3><a href="https://github.com/SuzSch/boring-lecture">Boring Lecture</a></h3>
   
