WIP add background image to the body.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <p>This is my first foray into coding of any kind. Some of my more interesting past jobs have been ski instructor, lifeguard, barista, flower farmer, florist and price file manager. I think by bringing all of the various skills I have picked up during these jobs to coding, I can be a valuable assest to any team.
   </p>
 
-<div>
+<div class="flowers">
   
   <h2 class="center">Come take a look at some of the projects I have made so far</h2>
 
@@ -46,9 +46,6 @@
   </ul>
   
 </div>
-
-
-
 
 </body>
 </html>
