Add sidebar.WIP Add box style to about me.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   
   <img src="images/suz-in-Norway.jpg" width="400px">
   
+<div class="sidebar">
   <h2 class="center">About Me</h2>
 
   <p>This is my first foray into coding of any kind. Some of my more interesting past jobs have been ski instructor, lifeguard, barista, flower farmer, florist and price file manager. I think by bringing all of the various skills I have picked up during these jobs to coding, I can be a valuable assest to any team.
   </p>
+</div>
 
 <div>
   
