Add ordered list to the About Me scetion. WIP add colunms and format them correctly.

--- a/index.html
+++ b/index.html
@@ -9,20 +9,31 @@
   
   <img src="images/suz-in-Norway.jpg" width="400px">
   
-<div class="sidebar">
+<div class="sidebar" class="column">
   <h2 class="center">About Me</h2>
 
   <p>This is my first foray into coding of any kind. Some of my more interesting past jobs have been ski instructor, lifeguard, barista, flower farmer, florist and price file manager. I think by bringing all of the various skills I have picked up during these jobs to coding, I can be a valuable assest to any team.
+  
+   I have many fufilling creative outlets and activities that I love to do in my free time. Maybe too many!
+    <ol>
+      <li>Sewing</li>
+      <li>Gardening</li>
+      <li>Photography</li>
+      <li>Hiking</li>
+      <li>Baking</li>
+      <li>Drawing</li>
+    </ol>
+  The list goes on and now add coding to it. 
+
   </p>
 </div>
 
-<div>
-  
   <h2 class="center">Come take a look at some of the projects I have made so far</h2>
 
+<div>
   <h3><a href="https://github.com/SuzSch/boring-lecture">Boring Lecture</a></h3>
   
-  <p>Some may call it boring, but I call it a great learning experience. While making this project I learned some new skills such as:</p>
+  <p>Some may call it boring, but I call it a great learning experience. While making this project I learned some <span class="new-skills">new skills</span> such as:</p>
   <ul>
     <li>Styling with the <strong>class</strong> attribute</li>
     <li>Styling with <strong>id</strong> attribute</li>
@@ -31,7 +42,7 @@
     
   <h3><a href="https://github.com/SuzSch/First-Push">First First-Push</a></h3>
   
-  <p>This project was made in day two of class and it was a doozy. I learned all about Git, with its many step process and about GitHub and how use it to track your work and share it with others. Some lessons learned were:</p>
+  <p>This project was made in day two of class and it was a doozy. I learned all about Git, with its many step process and about GitHub and how use it to track your work and share it with others. Some <span class="new-skills">lessons learned</span> were:</p>
   <ul>
     <li>How to set up new remote repositories in GitHub</li>
     <li>How to <strong>push</strong> and <strong>pull</strong> to and from a remote repository </li>
@@ -40,7 +51,7 @@
 
   <h3><a href="https://github.com/SuzSch/happy-hour">Happy Hour</a></h3>
   
-  <p>Let's keep the fun times going! This is a project I have been working on in my own time to practice my new found skills and to hopefully have a simple living webpage where we can post upcoming after school happy hours. This is still very much a WIP but in the future I hope to add these features:</p>
+  <p>Let's keep the fun times going! This is a project I have been working on in my own time to practice my <span class="new-skills">new found skills</span> and to hopefully have a simple living webpage where we can post upcoming after school happy hours. This is still very much a WIP but in the future I hope to add these features:</p>
   <ul>
     <li>Some kind of fun animated background. <em>Haven't quite figured that one out yet.</em></li>
     <li>Some kind of Google Maps feature to link address of the place we are going that week.</li>
