Change css to update styling.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <title>Suzanne Schuber Portfolio</title>
 </head>
 <body class="flowers">
-  <h1 class="center">Welcome to Suzanne Schuber's Portfolio Page!</h1>
   
-  <img src="images/suz-in-Norway.jpg" width="400px">
+  <h1>Suzanne Schuber</h1>
   
-<div class="sidebar">
+  <img src="images/suz-in-Norway.jpg" width="400px" >
+  
+<div class="r-column">
   <h2 class="center">About Me</h2>
 
   <p>This is my first foray into coding of any kind. Some of my more interesting past jobs have been ski instructor, lifeguard, barista, flower farmer, florist and price file manager. I think by bringing all of the various skills I have picked up during these jobs to coding, I can be a valuable assest to any team.
@@ -28,9 +29,10 @@
   </p>
 </div>
 
+<div>
   <h2 class="center">Come take a look at some of the projects I have made so far</h2>
 
-<div>
+
   <h3><a href="https://github.com/SuzSch/boring-lecture">Boring Lecture</a></h3>
   
   <p>Some may call it boring, but I call it a great learning experience. While making this project I learned some <span class="new-skills">new skills</span> such as:</p>
