Add columns and center image to work with all viewports. Add alt text for image.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 </head>
 <body class="flowers">
   
-  <h1>Suzanne Schuber</h1>
+  <h1 class="l-column">Suzanne Schuber</h1>
+  <h1 class="r-column"> Portfolio</h1>
   
-  <img src="images/suz-in-Norway.jpg" width="400px" >
+  <img src="images/suz-in-Norway.jpg" alt="woman smiling in the snow"width="400px" class="photo" >
   
-<div class="r-column">
-  <h2 class="center">About Me</h2>
+<div>
+  <h2>About Me</h2>
 
   <p>This is my first foray into coding of any kind. Some of my more interesting past jobs have been ski instructor, lifeguard, barista, flower farmer, florist and price file manager. I think by bringing all of the various skills I have picked up during these jobs to coding, I can be a valuable assest to any team.
   
