--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 </head>
 <body class="flowers">
   
-  <h1 class="l-column">Suzanne Schuber</h1>
-  <h1 class="r-column"> Portfolio</h1>
+  <h1 class="l-column heading" >Suzanne Schuber</h1>
+  <h1 class="r-column heading"> Portfolio</h1>
   
   <img src="images/suz-in-Norway.jpg" alt="woman smiling in the snow"width="400px" class="photo" >
   
-<div>
-  <h2>About Me</h2>
+<div >
+  <h2 class="heading">About Me</h2>
 
   <p>This is my first foray into coding of any kind. Some of my more interesting past jobs have been ski instructor, lifeguard, barista, flower farmer, florist and price file manager. I think by bringing all of the various skills I have picked up during these jobs to coding, I can be a valuable assest to any team.
   
@@ -31,7 +31,7 @@
 </div>
 
 <div>
-  <h2 class="center">Come take a look at some of the projects I have made so far</h2>
+  <h2 class="heading">Come take a look at some of the projects I have made so far</h2>
 
 
   <h3><a href="https://github.com/SuzSch/boring-lecture">Boring Lecture</a></h3>
