Add new ccs style to div element.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   
   <img src="images/suz-in-Norway.jpg" alt="woman smiling in the snow"width="400px" class="photo" >
   
-<div >
   <h2 class="heading">About Me</h2>
+
+<div class="peachy" >
 
   <p>This is my first foray into coding of any kind. Some of my more interesting past jobs have been ski instructor, lifeguard, barista, flower farmer, florist and price file manager. I think by bringing all of the various skills I have picked up during these jobs to coding, I can be a valuable assest to any team.
   
@@ -30,9 +31,10 @@
   </p>
 </div>
 
-<div>
+
   <h2 class="heading">Come take a look at some of the projects I have made so far</h2>
 
+  <div class="peachy">
 
   <h3><a href="https://github.com/SuzSch/boring-lecture">Boring Lecture</a></h3>
   
@@ -43,7 +45,7 @@
     <li>The difference between the two and when to use which</li>
   </ul>
     
-  <h3><a href="https://github.com/SuzSch/First-Push">First First-Push</a></h3>
+  <h3><a href="https://github.com/SuzSch/First-Push">First Push</a></h3>
   
   <p>This project was made in day two of class and it was a doozy. I learned all about Git, with its many step process and about GitHub and how use it to track your work and share it with others. Some <span class="new-skills">lessons learned</span> were:</p>
   <ul>
