Add new background image.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Suzanne Schuber Portfolio</title>
 </head>
-<body class="flowers">
+<body>
+
+  <div class="flowers">
   
   <h1 class="l-column heading" >Suzanne Schuber</h1>
   <h1 class="r-column heading"> Portfolio</h1>
@@ -13,12 +15,15 @@
   
   <h2 class="heading">About Me</h2>
 
-<div class="peachy" >
+<div class="peachy">
 
   <p>This is my first foray into coding of any kind. Some of my more interesting past jobs have been ski instructor, lifeguard, barista, flower farmer, florist and price file manager. I think by bringing all of the various skills I have picked up during these jobs to coding, I can be a valuable assest to any team.
-  
+  </p> 
+  <p>
    I have many fufilling creative outlets and activities that I love to do in my free time. Maybe too many!
-    <ol>
+  </p>
+   
+  <ol>
       <li>Sewing</li>
       <li>Gardening</li>
       <li>Photography</li>
@@ -26,11 +31,12 @@
       <li>Baking</li>
       <li>Drawing</li>
     </ol>
-  The list goes on and now add coding to it. 
+  The list goes on and on plus now I'll add coding to it! 
 
-  </p>
+</div>
 </div>
 
+<div class="matrix">
 
   <h2 class="heading">Come take a look at some of the projects I have made so far</h2>
 
