update background images and some styles.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </div>
 </div>
 
-<div class="matrix">
+<div class="clouds">
 
   <h2 class="heading">Come take a look at some of the projects I have made so far</h2>
 
