--- a/index.html
+++ b/index.html
@@ -1,77 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Suzanne Schuber Portfolio</title>
 </head>
+
 <body>
 
   <div class="flowers">
-  
-  <h1 class="l-column heading" >Suzanne Schuber</h1>
-  <h1 class="r-column heading"> Portfolio</h1>
-  
-  <img src="images/suz-in-Norway.jpg" alt="woman smiling in the snow"width="400px" class="photo" >
-  
-  <h2 class="heading">About Me</h2>
 
-<div class="peachy">
+    <h1 class="l-column heading">Suzanne Schuber</h1>
+    <h1 class="r-column heading"> Portfolio</h1>
 
-  <p>This is my first foray into coding of any kind. Some of my more interesting past jobs have been ski instructor, lifeguard, barista, flower farmer, florist and price file manager. I think by bringing all of the various skills I have picked up during these jobs to coding, I can be a valuable assest to any team.
-  </p> 
-  <p>
-   I have many fufilling creative outlets and activities that I love to do in my free time. Maybe too many!
-  </p>
-   
-  <ol>
-      <li>Sewing</li>
-      <li>Gardening</li>
-      <li>Photography</li>
-      <li>Hiking</li>
-      <li>Baking</li>
-      <li>Drawing</li>
-    </ol>
-  The list goes on and on <em>plus</em> now I'll add coding to it! 
+    <img src="images/suz-in-Norway.jpg" alt="woman smiling in the snow" width="400px" class="photo">
 
-</div>
-</div>
+    <h2 class="heading">About Me</h2>
 
-  
+    <div class="peachy">
 
-<div class="clouds">
-  
-  <h2 class="heading">Come take a look at some of the projects I have made so far</h2>
+      <p>This is my first foray into coding of any kind. Some of my more interesting past jobs have been ski instructor,
+        lifeguard, barista, flower farmer, florist and price file manager. I think by bringing all of the various skills
+        I have picked up during these jobs to coding, I can be a valuable assest to any team.
+      </p>
+      <p>
+        I have many fufilling creative outlets and activities that I love to do in my free time. Maybe too many!
+      </p>
 
-  <div class="peachy">
+      <ol>
+        <li>Sewing</li>
+        <li>Gardening</li>
+        <li>Photography</li>
+        <li>Hiking</li>
+        <li>Baking</li>
+        <li>Drawing</li>
+      </ol>
+      The list goes on and on <em>plus</em> now I'll add coding to it!
+    </div>
+  </div>
 
-  <h3><a href="https://github.com/SuzSch/boring-lecture">Boring Lecture</a></h3>
-  
-  <p>Some may call it boring, but I call it a great learning experience. While making this project I learned some <span class="new-skills">new skills</span> such as:</p>
-  <ul>
-    <li>Styling with the <strong>class</strong> attribute</li>
-    <li>Styling with <strong>id</strong> attribute</li>
-    <li>The difference between the two and when to use which</li>
-  </ul>
-    
-  <h3><a href="https://github.com/SuzSch/First-Push">First Push</a></h3>
-  
-  <p>This project was made in day two of class and it was a doozy. I learned all about Git, with its many step process and about GitHub and how use it to track your work and share it with others. Some <span class="new-skills">lessons learned</span> were:</p>
-  <ul>
-    <li>How to set up new remote repositories in GitHub</li>
-    <li>How to <strong>push</strong> and <strong>pull</strong> to and from a remote repository </li>
-    <li>How to clone a remote repository to make it a remote repository</li>
-  </ul>
 
-  <h3><a href="https://github.com/SuzSch/happy-hour">Happy Hour</a></h3>
-  
-  <p>Let's keep the fun times going! This is a project I have been working on in my own time to practice my <span class="new-skills">new found skills</span> and to hopefully have a simple living webpage where we can post upcoming after school happy hours. This is still very much a WIP but in the future I hope to add these features:</p>
-  <ul>
-    <li>Some kind of fun animated background.</li>
-    <li>A Google Maps feature to link address of the place we are going that week.</li>
-    <li>A section to post pics from previous happy hour outtings.</li>
-  </ul>
-  
-</div>
 
+  <div class="clouds">
+
+    <h2 class="heading">Come take a look at some of the projects I have made so far</h2>
+
+    <div class="peachy">
+
+      <h3><a href="https://github.com/SuzSch/boring-lecture">Boring Lecture</a></h3>
+
+      <p>Some may call it boring, but I call it a great learning experience. While making this project I learned some
+        <span class="new-skills">new skills</span> such as:
+      </p>
+      <ul>
+        <li>Styling with the <strong>class</strong> attribute</li>
+        <li>Styling with <strong>id</strong> attribute</li>
+        <li>The difference between the two and when to use which</li>
+      </ul>
+
+      <h3><a href="https://github.com/SuzSch/First-Push">First Push</a></h3>
+
+      <p>This project was made in day two of class and it was a doozy. I learned all about Git, with its many step
+        process and about GitHub and how use it to track your work and share it with others. Some <span
+          class="new-skills">lessons learned</span> were:</p>
+      <ul>
+        <li>How to set up new remote repositories in GitHub</li>
+        <li>How to <strong>push</strong> and <strong>pull</strong> to and from a remote repository </li>
+        <li>How to clone a remote repository to make it a remote repository</li>
+      </ul>
+
+      <h3><a href="https://github.com/SuzSch/happy-hour">Happy Hour</a></h3>
+
+      <p>Let's keep the fun times going! This is a project I have been working on in my own time to practice my <span
+          class="new-skills">new found skills</span> and to hopefully have a simple living webpage where we can post
+        upcoming after school happy hours. This is still very much a WIP but in the future I hope to add these features:
+      </p>
+      <ul>
+        <li>Some kind of fun animated background.</li>
+        <li>A Google Maps feature to link address of the place we are going that week.</li>
+        <li>A section to post pics from previous happy hour outtings.</li>
+      </ul>
+
+    </div>
+  </div>
 </body>
+
 </html>
